# AutoCompliance

./: .gitignore  README.md  SECURITY.md  demo.sh  dev_setup.sh  main.py  net_propagation.py  requirements.txt  run_demo.sh  run_tests.sh  setup.sh  test_main.py  tests.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis-develop.yml  codeql-analysis-feature.yml  codeql-analysis-main.yml  codeql-analysis-sprint.yml  codeql-analysis.yml  python-app-develop.yml  python-app-feature.yml  python-app-main.yml  python-app-sprint.yml  python-app.yml
autocompliance/: meson.build  org.example.App.json
autocompliance/data/: org.example.App.appdata.xml.in  org.example.App.desktop.in  (+1 more)
autocompliance/src/: autocompliance.gresource.xml  autocompliance.in  blockchain.py  blockchain_functions.py  demo.py  demo_functions.py  file.py  main.py  meson.build  net_propagation.py  strings.py  strings_functions.py  test_blockchain.py  test_demo_functions.py  test_file.py  test_net_propagation.py  test_strings_functions.py  window.py  window.ui
autocompliance/src/test_files/: file.txt
classes/: main.py
docs/: Build.md  Home.md  Research.md  guidelines.md  index.md  proposal.md  research.md  wiki.md
src/: AutoCompliance.py  autoComplianceUI.py  blockchain.py  blockchain_functions.py  demo.old.py  demo.py  demo_functions.py  file.py  main.dev.py  main.old.py  main.py  net_propagation.py  strings.py  strings_functions.py  test_blockchain.py  test_demo_functions.py  test_file.py  test_net_propagation.py  test_strings_functions.py
tests/: main_test.py
(+19 files in other folders)
